--- a/src/shared/Navigation.module.css
+++ b/src/shared/Navigation.module.css
@@ -1,7 +1,3 @@
-.navContainer {
-  margin-left: auto;
-}
-
 .hamburgerMenuContainer, .closeBtnContainer {
   color: var(--nav-text-color);
   font-size: 2.2rem;
@@ -43,6 +39,7 @@
   align-items: center;
   justify-content: center;
   font-size: 2.5rem;
+  gap: 1em
 }
 
 .navLink {
